--- a/custom_jenkins/docker-compose.yml
+++ b/custom_jenkins/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     restart: unless-stopped
     environment:
       - JENKINS_OPTS=--httpPort=8080
+      - DOCKER_API_VERSION=1.43
 
 volumes:
   jenkins_home_rag_medical:
